--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
         <div class="Kontakt">
             <h2>Votke uhendust</h2>
             <h3>Kui sulle meeldib IT</h3>
-            <p class="kontakt-m">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+            <p class="kontakt-m">gdgdfgdfgdfgdfgdgfg</p>
             <a class="btn" href="mailto:raintraagel@gmail.com">Kontakt</a>
         </div>
     </div>
 
 
     <div class="Footer">
-        <a class="footer-link" href="https://www.linkedin.com/in/angela-yu-963a584b/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/yu_angela">Facebook</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Veebileht</a>
+        <a class="footer-link" href="">LinkedIn</a>
+        <a class="footer-link" href="">Facebook</a>
+        <a class="footer-link" href="">Veebileht</a>
         <p class="copyright">© 2018 Rain Traagel</p>
     </div>
 </body>
