--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
     <!-- Font Awesome Icon Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Rain Traagel CV</title>
 </head>
 
@@ -16,9 +18,9 @@
     <div class="Hero">
         <img class="top-c" src="images/cloud.png" alt="Cloud-img">
         <h1>Ma olen Rain.</h1>
-        <h2>IT Spetsialist & Veebiarendaja</h2>
+        <h2 class="typed"></h2>
         <img class="bottom-c" src="images/cloud.png" alt="Cloud-img">
-        <img src="images/mountain.png" alt="Mountan-img">
+        <img class="mountain" src="images/mountain.png" alt="Mountan-img">
     </div>
 
 
@@ -67,7 +69,7 @@
                                 <span class="fa fa-star"></span></th>
                         </p>
                     </tr>
-                                        <tr>
+                    <tr>
                         <p>
                             <td>PHP</td>
                             <th><span class="fa fa-star checked"></span>
@@ -79,9 +81,9 @@
                     </tr>
                 </table>
             </div>
-<br>
-            <div class="skill2">
-                <img class="s2-img" src="images/chillies.png" alt="chillies-img">
+            <br>
+            <div class="skill1">
+                <img class="s1-img" src="images/chillies.png" alt="chillies-img">
                 <h3>Tarkvara</h3>
                 <table>
                     <tr>
@@ -114,9 +116,66 @@
                                 <span class="fa fa-star"></span></th>
                         </p>
                     </tr>
-                                        <tr>
+                    <tr>
                         <p>
                             <td>PHP</td>
+                            <th><span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></th>
+                        </p>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="skill1">
+                <img class="s1-img" src="images/chillies.png" alt="chillies-img">
+                <h3>Tarkvara</h3>
+                <table>
+                    <tr>
+                        <p>
+                            <td>HTML</td>
+                            <th><span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></th>
+                        </p>
+                    </tr>
+                    <tr>
+                        <p>
+                            <td>CSS</td>
+                            <th><span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></th>
+                        </p>
+                    </tr>
+                    <tr>
+                        <p>
+                            <td>JSS</td>
+                            <th><span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></th>
+                        </p>
+                    </tr>
+                    <tr>
+                        <p>
+                            <td>PHP</td>
+                            <th><span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></th>
+                        </p>
+                    </tr>
+                         <tr>
+                        <p>
+                            <td>CSS</td>
                             <th><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -134,7 +193,7 @@
         <div class="Kontakt">
             <h2>Votke uhendust</h2>
             <h3>Kui sulle meeldib IT</h3>
-            <p class="kontakt-m">gdgdfgdfgdfgdfgdgfg</p>
+            <p class="kontakt-m">dasdasdsadasdas</p>
             <a class="btn" href="mailto:raintraagel@gmail.com">Kontakt</a>
         </div>
     </div>
@@ -146,6 +205,12 @@
         <a class="footer-link" href="">Veebileht</a>
         <p class="copyright">© 2018 Rain Traagel</p>
     </div>
+
+
+    <script src="js/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
